# codex-auth

./: .gitignore  README.md  pyproject.toml  test_live.py
.github/workflows/: codeql.yml
src/codex_auth/: __init__.py  auth.py  client.py  patch.py  tokens.py
tests/: test_auth.py  test_patch.py  test_tokens.py
